# AI_CLI_assitant

./: config.py  main.py  mustafa.py  pyhon_file_way.py  pyproject.toml
full_stack/: index.html  script.js  styles.css
w_r_methods_folder/: simple_python.py
