[project]
name = "ai-cli-assitant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "numpy>=2.3.4",
    "openai-agents",
    "rich>=14.2.0",
    "sounddevice>=0.5.3",
    "websockets>=15.0.1",
]
